# csb-foss

./: .gitignore  README.md  STATUS.md  pyproject.toml
config/: csb_foss.ini
notebooks/: 01_explore_cdl.ipynb  02_baseline_pipeline.ipynb  03_experimental_segmentation.ipynb  04_validation_comparison.ipynb
src/csb_foss/: __init__.py  config.py
src/csb_foss/db/: __init__.py  duckdb_ops.py  schema.py
src/csb_foss/experimental/: __init__.py  edge_voting.py  naip_segmentation.py  road_integration.py  watershed.py
src/csb_foss/pipeline/: __init__.py  create.py  distribute.py  prep.py  tiled_create.py
src/csb_foss/raster/: __init__.py  combine.py  io.py
src/csb_foss/vector/: __init__.py  eliminate.py  eliminate_fast.py  simplify.py  vectorize.py
