[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csb-foss"
version = "0.1.0"
description = "FOSS implementation of USDA Crop Sequence Boundaries"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "CSB FOSS Team" }
]
keywords = ["agriculture", "gis", "remote-sensing", "crop-boundaries"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    # Core geospatial
    "numpy>=1.24",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "fiona>=1.9",
    "pyproj>=3.5",

    # Data storage
    "pyarrow>=14.0",
    "duckdb>=1.0",

    # Processing
    "scipy>=1.11",
    "scikit-image>=0.21",
    "rasterstats>=0.19",
    "joblib>=1.3",

    # Large data support
    "dask>=2023.10",
    "dask-geopandas>=0.3",

    # Utilities
    "click>=8.0",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "folium>=0.15",
    "ipywidgets>=8.0",
]

[project.scripts]
csb-foss = "csb_foss.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/csb_foss"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
